--- a/layout/partial/footer.pug
+++ b/layout/partial/footer.pug
@@ -2,3 +2,9 @@
   span 宁静致远
   span &nbsp; &&&nbsp;   
   span 不卑不亢
+  
+  .by_farbox
+    span Powered by 
+    a(href="https://hexo.io/zh-cn/", target="_blank") Hexo 
+    span  & 
+    a(href="https://github.com/weixusheng/Hexo-theme-Anatole-Tronwei", target="_blank") Anatole-Tronwei.  
