优化界面布局

--- a/layout/partial/sidebar.pug
+++ b/layout/partial/sidebar.pug
@@ -1,6 +1,8 @@
 .sidebar.animated.fadeInDown
   .logo-title
     .title
+      .apple-music
+      a(href="https://geo.music.apple.com/cn/album/thank-u-next/1450330588?mt=1&app=music&ls=1" style="display:inline-block;overflow:hidden;background:url(https://tools.applemusic.com/embed/v1/app-icon.svg) no-repeat;width:40px;height:40px;")
       img(src= url_for('images/logo@2x.png'),style="width:110px;")
       h3(title="")
         a(href="/")= config.title
